Encriptacion de contraseñas y DTOs con Lombok y MapStruct, y uso de spring security para autenticación JWT, ademas de comentar todo el código con explicaciones detalladas.